structured html and javascript further, added more commenting, started adding functions for navigation, revised home header --> added to home view instead of having it's own, created function and request for registering user, created function and request for login, fixed z-index bugg on home_page, added function for adding data to dropdown in home search, added button for search

--- a/client/index.css
+++ b/client/index.css
@@ -79,7 +79,7 @@ h1 {
   cursor: pointer;
   
   opacity: 0; /* hide this */
-  z-index: 2; /* and place it over the hamburger */
+  z-index: 6; /* and place it over the hamburger */
   
   -webkit-touch-callout: none;
 }
@@ -98,7 +98,7 @@ h1 {
   background: black;
   border-radius: 3px;
   
-  z-index: 1;
+  z-index: 5;
   
   transform-origin: 4px 0px;
   
@@ -163,6 +163,8 @@ h1 {
   transform: translate(120%, 0%);
 
   transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
+
+  z-index: 4;
 }
   
 #menu li{
@@ -179,25 +181,27 @@ h1 {
 }
 
 #content {
-    margin-top: 100vh;
     padding: 0;
+}
+
+#home_container {
+  margin-top: 1020px;
+  padding: 0;
 }
 
 #header{
   background-color: paleturquoise;
   color:black;
   width: 100%;
-  height: 100vh;
+  height: 1080px;
   position: absolute;
   top: 0;
-  z-index: -1;
   padding-top: 20vw;
 }
 
 #home_search {
   background-color: white;
   border-radius: 37px;
-  padding: 10px;
 }
 
 #search_page_container {
@@ -211,6 +215,13 @@ h1 {
 
 /* Klasser */
 
+.search_button {
+  border-radius: 50px;
+}
+
+.navbar {
+  z-index: 2;
+}
 
 .footer{
   background-color: black;
@@ -240,6 +251,10 @@ a:hover{
   list-style-type: none;
   margin: 0;
   padding: 0;
+}
+
+.no-border {
+  border-style: none;
 }
 
 a:hover{
